Not really a commit, first commit since having to restore my local data, thank god for git.

--- a/mini-projects/qbench/TODO.txt
+++ b/mini-projects/qbench/TODO.txt
@@ -1,1 +1,1 @@
-Allow the addition of command line arguments, format the output a little more nicely.
+Allow ths\e addition of command line arguments, format the output a little more nicely.
